--- a/AquAnalyzerWebApp/Components/Pages/ManageWaterData.razor
+++ b/AquAnalyzerWebApp/Components/Pages/ManageWaterData.razor
@@ -2,7 +2,7 @@
 @page "/manage-waterdata/{Id:int}"
 @using AquAnalyzerAPI.Services
 @using AquAnalyzerAPI.Interfaces
-@using AquAnalyzerAPI.Models
+@using AquAnalyzerWebApp.Models
 @using Microsoft.AspNetCore.Components.Forms
 
 @inject IWaterService WaterService
@@ -13,12 +13,12 @@
 
     @if (!string.IsNullOrEmpty(statusMessage))
     {
-            <div class="alert @(isSuccess ? "alert-success" : "alert-danger") alert-dismissible fade show" role="alert">
+        <div class="alert @(isSuccess ? "alert-success" : "alert-danger") alert-dismissible fade show" role="alert">
             @statusMessage
-                <button type="button" class="close" @onclick="@(() => statusMessage = null)">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+            <button type="button" class="close" @onclick="@(() => statusMessage = null)">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
     }
 
     <div class="row">
@@ -75,9 +75,9 @@
                         </button>
                         @if (IsEditMode)
                         {
-                                <button type="button" class="btn btn-danger ml-2" @onclick="DeleteEntry">
-                                    Delete Entry
-                                </button>
+                            <button type="button" class="btn btn-danger ml-2" @onclick="DeleteEntry">
+                                Delete Entry
+                            </button>
                         }
                         <button type="button" class="btn btn-secondary ml-2" @onclick="NavigateBack">
                             Back
@@ -97,11 +97,11 @@
     [SupplyParameterFromQuery]
     public string ReturnUrl { get; set; }
 
-    private WaterData waterData = new();
+    private WaterDataDto waterData = new();
     private bool IsEditMode => Id.HasValue;
     private string statusMessage;
     private bool isSuccess;
-    private List<WaterData> existingWaterData = new();
+    private List<WaterDataDto> existingWaterData = new();
 
     protected override async Task OnInitializedAsync()
     {
@@ -145,7 +145,7 @@
             }
             else
             {
-                await WaterService.UpdateWaterDataAsync(waterData);
+                await WaterService.UpdateWaterDataAsync(waterData.Id, waterData);
                 SetStatusMessage("Water data updated successfully!", true);
             }
 
