--- a/AquAnalyzerWebApp/Components/Pages/Home.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Home.razor
@@ -4,7 +4,7 @@
 
 <h1>Welcome to AquAnalyzer!</h1>
 
-<p>Welcome to AquAnalyzer, your ultimate tool for tracking water sustainability! Designed for Kamstrup, AquAnalyzer helps you monitor water usage and improve ESG performance with ease. Dive into data, visualize metrics, and make every drop count!</p>
+<p>Your ultimate tool for tracking water sustainability! Designed for Kamstrup, AquAnalyzer helps you monitor water usage and improve ESG performance with ease. Dive into data, visualize metrics, and make every drop count!</p>
 
 <div class="image-container">
     <img src="images/AquAnalyzerPersonPic.png" alt="PersonPic" class="image">
@@ -36,7 +36,7 @@
     .image {
         width: 300px; /* Fixed width */
         height: 200px; /* Fixed height */
-        object-fit: cover; /* Ensure the image covers the area without distortion */
+        object-fit: contain; /* Ensure the entire image is visible without distortion */
         border-radius: 8px; /* Rounded corners */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     }
