--- a/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
+++ b/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="main-container">
+    <NavMenu />
     <div class="content">
         @Body
     </div>
@@ -44,7 +45,7 @@
 
     .footer {
         background-color: var(--secondary-color);
-        color: white;
+        color: #2980b9;
         padding: 16px;
         text-align: center;
     }
