Enhance AquAnalyzer layout and error handling; update logging and data models

--- a/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
+++ b/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,10 @@
 ﻿@inherits LayoutComponentBase
+@using Microsoft.AspNetCore.Components.Web
+<PageTitle>AquAnalyzer</PageTitle>
+
+<HeadContent>
+    <title>AquAnalyzer</title>
+</HeadContent>
 <div class="main-container">
     <NavMenu />
 
