--- a/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
+++ b/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                         <i class="fas fa-analytics mr-2"></i>Analytics
                     </NavLink>
                 </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/notifications">
+                        <i class="fas fa-analytics mr-2"></i>Notifications
+                    </NavLink>
+                </li>
             </ul>
         </div>
     </div>
