--- a/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
+++ b/AquAnalyzerWebApp/Components/Layout/NavMenu.razor
@@ -4,9 +4,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-water-light shadow-sm">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
-            @* <img src="/water-logo.svg" width="40" height="40" class="d-inline-block align-top" alt="AquAnalyzer Logo" /> *@
-            <span class="brand-text ml-2">AquAnalyzer</span>
-        </a>
+            <img src="/images/aquanalyzer_logo.png" width="220" class="d-inline-block align-top"
+                alt="AquAnalyzer Logo" /> </a>
         <div class="hamburger" @onclick="ToggleMenu">
             <div></div>
             <div></div>
@@ -25,8 +24,8 @@
                     </NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/analytics">
-                        <i class="fas fa-analytics mr-2"></i>Analytics
+                    <NavLink class="nav-link" href="/reports">
+                        <i class="fas fa-chart-line mr-2"></i>Reports
                     </NavLink>
                 </li>
             </ul>
