Functioning nav menu with auth

--- a/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
+++ b/AquAnalyzerWebApp/Components/Layout/MainLayout.razor
@@ -6,7 +6,9 @@
     <title>AquAnalyzer</title>
 </HeadContent>
 <div class="main-container">
-    <NavMenu />
+    <header>
+        <NavMenu />
+    </header>
 
     <div class="main-content">
         <div class="container-fluid p-4">
