--- a/AquAnalyzerWebApp/Components/Pages/WaterDataDashboard.razor.css
+++ b/AquAnalyzerWebApp/Components/Pages/WaterDataDashboard.razor.css
@@ -1,30 +1,34 @@
 .table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-    font-size: 18px;
-    text-align: left;
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 18px;
+  text-align: left;
 }
 
 .table th,
 .table td {
-    padding: 12px 15px;
-    border: 1px solid #ddd;
+  padding: 12px 15px;
+  border: 1px solid #ddd;
 }
 
 .table th {
-    background-color: #f4f4f4;
-    color: #333;
+  background-color: #f4f4f4;
+  color: #333;
 }
 
 .table tr:nth-child(even) {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
 
 .table tr:hover {
-    background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 .table tr p {
-    color: black;
+  color: black;
+}
+
+.abnormality-section {
+  margin-left: auto;
 }
